--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.github.vipulasri:timelineview:1.0.3'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    apply plugin: 'android-apt'
+    compile 'com.jakewharton:butterknife:8.2.1'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 }
